# VortexJs

./: CMakeLists.txt
quickjs/libquickjs/: libquickjs.vcxproj
quickjs/libquickjs/x64/Release/: cutils.obj.import  libregexp.obj.import  libunicode.obj.import  quickjs.obj.import
quickjs/libquickjs/x64/Release/libquickjs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libquickjs.lastbuildstate
quickjs/test_quickjs/: test_quickjs.vcxproj
quickjs/x64/Release/: libquickjs.lib
src/: Javascript_language.cpp  javascript_language.h  vortex_vm.cpp
